--- a/website/404.html
+++ b/website/404.html
@@ -3,21 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title><%= code %> - <%= error_messages[code] %></title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="/hello/css/style.css">
-
-<link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
-<body id="not-found-page">
-  <div id="container">
-    <header>
-      <a href="http://koding.com">Koding.com</a>
-    </header>
-    <h2><%= error_messages[code] %></h2>
-    <a href="http://koding.com" title="Return to koding.com" class="return-home"><%= messageHTML %></a>
-    <div class="astronaut-problem-wrapper">
-      <img src="/hello/img/astronaut_problem.png" class="astronaut-problem">
-    </div>
-  </div>
-</body>
+<body></body>
+<script>
+  var code = "<%= code %>";
+  var msg  = "<%= error_messages[code] %>";
+  msg = encodeURIComponent(msg);
+  url = "http://www.koding.com/"+code+"?msg="+msg;
+  window.location = url;
+</script>
 </html>
